--- a/secrets.toml
+++ b/secrets.toml
@@ -1,4 +1,4 @@
-[X]
-username = trashdumpyash
-email = trashdumpyash@gmail.com
-password = yashsingh100
+[credentials]
+username = "trashdumpyash"
+email = "trashdumpyash@gmail.com"
+password = "yashsingh100"
