--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,4 +1,4 @@
 [credentials]
-username = "trashdumpyash"
-email = "trashdumpyash@gmail.com"
+username = "NikhilSing_zer0"
+email = "nikhilsingh.is22@bmsce.ac.in"
 password = "yashsingh100"
